tests/__snapshots__/validation-ts-expect-error-multi-line-missing-argument-stderr.snap.txt
Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

  2 | 
  3 | /**
  4 | @ts-expect-error */
    | ~~~~~~~~~~~~~~~~
  5 | texts.push(100);
  6 | 
  7 | /**

      at ./__typetests__/sample.tst.ts:4:1

    The suppressed error:

    Argument of type 'number' is not assignable to parameter of type 'string'. ts(2345)

      3 | /**
      4 | @ts-expect-error */
      5 | texts.push(100);
        |            ~~~
      6 | 
      7 | /**
      8 | // @ts-expect-error */

          at ./__typetests__/sample.tst.ts:5:12

Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

   6 | 
   7 | /**
   8 | // @ts-expect-error */
     |    ~~~~~~~~~~~~~~~~
   9 | texts.push(100);
  10 | 
  11 | /**

       at ./__typetests__/sample.tst.ts:8:4

    The suppressed error:

    Argument of type 'number' is not assignable to parameter of type 'string'. ts(2345)

       7 | /**
       8 | // @ts-expect-error */
       9 | texts.push(100);
         |            ~~~
      10 | 
      11 | /**
      12 |  * @ts-expect-error */

           at ./__typetests__/sample.tst.ts:9:12

Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

  10 | 
  11 | /**
  12 |  * @ts-expect-error */
     |    ~~~~~~~~~~~~~~~~
  13 | texts.push(100);
  14 | 
  15 | /*@ts-expect-error*/

       at ./__typetests__/sample.tst.ts:12:4

    The suppressed error:

    Argument of type 'number' is not assignable to parameter of type 'string'. ts(2345)

      11 | /**
      12 |  * @ts-expect-error */
      13 | texts.push(100);
         |            ~~~
      14 | 
      15 | /*@ts-expect-error*/
      16 | texts.push(100);

           at ./__typetests__/sample.tst.ts:13:12

Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

  13 | texts.push(100);
  14 | 
  15 | /*@ts-expect-error*/
     |   ~~~~~~~~~~~~~~~~
  16 | texts.push(100);
  17 | 

       at ./__typetests__/sample.tst.ts:15:3

    The suppressed error:

    Argument of type 'number' is not assignable to parameter of type 'string'. ts(2345)

      14 | 
      15 | /*@ts-expect-error*/
      16 | texts.push(100);
         |            ~~~
      17 | 

           at ./__typetests__/sample.tst.ts:16:12

